--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,49 @@
-**/node-modules/**
-backend/__pycache__/**
+# IDE files
+.idea/
+.vscode/
+
+# Environment variables
+.env
+.envrc
+*/.env
+*/.envrc
+# mypy / typing bits
+.mypy_cache
+out/
+
+# poetry virtual environment
+.venv
+
+# pytest
+.pytest_cache
+
+## Generic python stuff
+# Byte-compiled / optimized / DLL files
+*/__pycache__/
+*.py[cod]
+*$py.class
+
+# C extensions
+*.so
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+.DS_Store
