--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 python = "^3.10"
 fastapi = "^0.104.1"
 uvicorn = "^0.23.2"
+anthropic = "^0.5.0"
+python-dotenv = "^1.0.0"
 
 
 [build-system]
