--- a/frontend/my-app/package.json
+++ b/frontend/my-app/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": "14.0.1",
+    "pdfjs-dist": "^3.11.174",
     "react": "^18",
     "react-dom": "^18"
   },
