--- a/frontend/my-app/package.json
+++ b/frontend/my-app/package.json
@@ -12,7 +12,8 @@
     "next": "14.0.1",
     "pdfjs-dist": "^3.11.174",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-tabs": "^6.0.2"
   },
   "devDependencies": {
     "@types/node": "^20",
